# monkeyKing

./: .ycm_extra_conf.py  CMakeLists.txt  Define.mk  Footer.mk  Header.mk  Makefile  README.md  build.sh  compile_commands.json  install.sh  setenv.sh
android/: Makefile
android/foundation/: ABitReader.cpp  ANetworkSession.cpp  Makefile
android/foundation/tests/: Makefile  foundatonTest.cpp
android/include/foundation/: ABitReader.h  ADebug.h  ALooperRoster.h  AMessage.h
android/utils/: Makefile  SharedBuffer.cpp  SortedVector.h  String16.cpp  String8.cpp  Threads.cpp  Timers.cpp  logd_write.c  misc.h
foundation/: ADebug.cpp  AHandler.cpp  AHierarchicalStateMachine.cpp  ALooper.cpp  ALooperRoster.cpp  AMessage.cpp  AString.cpp  Makefile  ParsedMessage.cpp  hexdump.cpp
include/foundation/: ABuffer.h  AString.h  AUtils.h  ParsedMessage.h
main/: Makefile  main.cpp
src/: CMakeLists.txt  Makefile
src/android/: CMakeLists.txt
src/android/foundation/: AHierarchicalStateMachine.cpp  AString.cpp  ByteUtils.cpp  Makefile
src/android/foundation/tests/: Makefile
src/android/include/foundation/: AData.h  ADebug.h  AHandler.h  AMessage.h  Flagged.h
src/android/include/utils/: Log.h  StrongPointer.h
src/android/tests/: CMakeLists.txt  Makefile  monkeyKingTest.cpp
src/android/utils/: Makefile  SharedBuffer.cpp  Threads.cpp
src/base/: ArgumentParser.cpp  ArgumentParser.h  Base.cpp  Base.h  CMakeLists.txt  CallStack.cpp  CallStack.h  Epoll.cpp  Epoll.h  Log.cpp  PluginManager.cpp  SignalHandler.cpp  SignalHandler.h  Socket.cpp  Socket.h  Util.cpp
src/base/include/base/: App.h  FactoryBase.h  Global.h  Log.h  PluginBase.h  PluginManager.h  Util.h
src/base/tests/pluginTest/: HelloApp.cpp  HelloApp.h  Makefile
src/foundation/: ABitReader.cpp  ADebug.cpp  AHandler.cpp  ALooper.cpp  AMessage.cpp  ANetworkSession.cpp  Makefile
src/foundation/tests/: foundatonTest.cpp
src/include/foundation/: ABuffer.h  ALooperRoster.h  AString.h  AUtils.h
src/include/utils/: RefBase.h  Vector.h
src/modules/faceDetection/: Android.mk  ageclassifier.cpp  ageclassifier.hpp  cascadeDetector.cpp  cascadeDetector.h  classifier.hpp  detectorBase.cpp  detectorBase.h  faceDetection.cpp  faceDetection.h  genderclassifier.cpp  genderclassifier.hpp  haarcascade_frontalface_alt.hpp  transfer.cpp  transfer.h
src/modules/faceDetection/host_tools/: Makefile  xml2array.c
src/modules/renderer/: Android.mk  MessageQueue.cpp  MessageQueue.h  renderer.cpp  renderer.h  rendererFrameAvailableListener.h  vmath.h
src/utils/: Makefile  RefBase.cpp  String8.cpp  VectorImpl.cpp  logd_write.c
test/: Makefile  monkeyKingTest.cpp
utils/: KeyedVector.h  Makefile  RefBase.cpp  ThreadDefs.h  Vector.h  VectorImpl.cpp  atomic-x86_64.h  atomic.h
